objects/vlocity_cmt__MobileConfiguration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>vlocity_cmt__ContactLabel__c</fullName>
        <description>The text label to use for the string &quot;Contact&quot; throughout the mobile app</description>
        <label>Contacts Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ContactPluralLabel__c</fullName>
        <description>The text label to use for the string &quot;Contacts&quot; throughout the mobile app</description>
        <label>Contact Plural Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IPadSplashLogox2__c</fullName>
        <description>The URL to the image to use for the iPad splash screen. The image must be 2048 x 1536</description>
        <label>iPad Splash Logo x 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IPhoneSplashLogox2__c</fullName>
        <description>The URL to the image to use for the iPhone splash screen. The image must be 750 x 1334</description>
        <label>iPhone Splash Logo x 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IPhoneSplashLogox3__c</fullName>
        <description>The URL to the image to use for the iPhone splash screen. The image must be 1242 x 2208</description>
        <label>iPhone Splash Logo x 3</label>
        <type>Url</type>
    </fields>
    <label>Mobile Configuration</label>
</CustomObject>